--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -157,7 +157,6 @@ scrape_configs:
   - job_name: 'iperf3-exporter-v2-wan1'
     scrape_interval: 5m
     scrape_timeout: 90s
-    scrape_offset: 0s
     metrics_path: '/probe'
     params:
       target: ['192.168.10.175']
@@ -175,9 +174,8 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN2
   - job_name: 'iperf3-exporter-v2-wan2'
-    scrape_interval: 5m
+    scrape_interval: 5m30s
     scrape_timeout: 90s
-    scrape_offset: 30s
     metrics_path: '/probe'
     params:
       target: ['192.168.10.175']
@@ -194,9 +192,8 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN3
   - job_name: 'iperf3-exporter-v2-wan3'
-    scrape_interval: 5m
+    scrape_interval: 6m
     scrape_timeout: 90s
-    scrape_offset: 1m
     metrics_path: '/probe'
     params:
       target: ['192.168.10.175']
@@ -213,9 +210,8 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN4
   - job_name: 'iperf3-exporter-v2-wan4'
-    scrape_interval: 5m
+    scrape_interval: 6m30s
     scrape_timeout: 90s
-    scrape_offset: 1m30s
     metrics_path: '/probe'
     params:
       target: ['192.168.10.175']
@@ -232,9 +228,8 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN5
   - job_name: 'iperf3-exporter-v2-wan5'
-    scrape_interval: 5m
+    scrape_interval: 7m
     scrape_timeout: 90s
-    scrape_offset: 2m
     metrics_path: '/probe'
     params:
       target: ['192.168.10.175']
@@ -251,9 +246,8 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN6
   - job_name: 'iperf3-exporter-v2-wan6'
-    scrape_interval: 5m
+    scrape_interval: 7m30s
     scrape_timeout: 90s
-    scrape_offset: 2m30s
     metrics_path: '/probe'
     params:
       target: ['192.168.10.175']
@@ -270,9 +264,8 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN7
   - job_name: 'iperf3-exporter-v2-wan7'
-    scrape_interval: 5m
+    scrape_interval: 8m
     scrape_timeout: 90s
-    scrape_offset: 3m
     metrics_path: '/probe'
     params:
       target: ['192.168.10.175']
@@ -289,9 +282,8 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN8
   - job_name: 'iperf3-exporter-v2-wan8'
-    scrape_interval: 5m
+    scrape_interval: 8m30s
     scrape_timeout: 90s
-    scrape_offset: 3m30s
     metrics_path: '/probe'
     params:
       target: ['192.168.10.175']
