--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -153,10 +153,11 @@ scrape_configs:
       - targets: ['192.168.10.18:9202']
 
   # iPerf3 Exporter v2 - WAN1 (Enhanced by ThanhDeptr)
-  # Staggered scrape intervals to avoid concurrent iperf3 tests to same server
+  # Staggered start times to avoid concurrent iperf3 tests to same server
   - job_name: 'iperf3-exporter-v2-wan1'
     scrape_interval: 5m
-    scrape_timeout: 90s
+    scrape_offset: 0s
+    scrape_timeout: 200s
     metrics_path: '/probe'
     params:
       target: ['192.168.10.175']
@@ -174,8 +175,9 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN2
   - job_name: 'iperf3-exporter-v2-wan2'
-    scrape_interval: 5m30s
-    scrape_timeout: 90s
+    scrape_interval: 5m
+    scrape_offset: 3m
+    scrape_timeout: 200s
     metrics_path: '/probe'
     params:
       target: ['192.168.10.175']
@@ -192,8 +194,9 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN3
   - job_name: 'iperf3-exporter-v2-wan3'
-    scrape_interval: 6m
-    scrape_timeout: 90s
+    scrape_interval: 5m
+    scrape_offset: 6m
+    scrape_timeout: 200s
     metrics_path: '/probe'
     params:
       target: ['192.168.10.175']
@@ -210,7 +213,8 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN4
   - job_name: 'iperf3-exporter-v2-wan4'
-    scrape_interval: 6m30s
+    scrape_interval: 5m
+    scrape_offset: 9m
     scrape_timeout: 200s
     metrics_path: '/probe'
     params:
@@ -228,7 +232,8 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN5
   - job_name: 'iperf3-exporter-v2-wan5'
-    scrape_interval: 7m
+    scrape_interval: 5m
+    scrape_offset: 12m
     scrape_timeout: 200s
     metrics_path: '/probe'
     params:
@@ -246,7 +251,8 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN6
   - job_name: 'iperf3-exporter-v2-wan6'
-    scrape_interval: 7m30s
+    scrape_interval: 5m
+    scrape_offset: 15m
     scrape_timeout: 200s
     metrics_path: '/probe'
     params:
@@ -264,7 +270,8 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN7
   - job_name: 'iperf3-exporter-v2-wan7'
-    scrape_interval: 8m
+    scrape_interval: 5m
+    scrape_offset: 18m
     scrape_timeout: 200s
     metrics_path: '/probe'
     params:
@@ -282,7 +289,8 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN8
   - job_name: 'iperf3-exporter-v2-wan8'
-    scrape_interval: 8m30s
+    scrape_interval: 5m
+    scrape_offset: 21m
     scrape_timeout: 200s
     metrics_path: '/probe'
     params:
