Add iPerf3 exporter with mutex mechanism and update Prometheus config
- Add iPerf3 exporter with global mutex to prevent concurrent tests
- Implement sync.Cond based locking with context cancellation
- Update Prometheus config with staggered intervals (20s apart)
- Change iPerf3 server from 192.168.10.175 to 13.231.52.162
- Add lock status endpoint for monitoring
- Fix race conditions and zombie goroutines

--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -153,10 +153,9 @@ scrape_configs:
       - targets: ['192.168.10.18:9202']
 
   # iPerf3 Exporter v2 - WAN1 (Enhanced by ThanhDeptr)
-  # Staggered start times to avoid concurrent iperf3 tests to same server
+  # Staggered intervals to avoid concurrent iperf3 tests to same server
   - job_name: 'iperf3-exporter-v2-wan1'
     scrape_interval: 5m
-    scrape_offset: 0s
     scrape_timeout: 200s
     metrics_path: '/probe'
     params:
@@ -175,8 +174,7 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN2
   - job_name: 'iperf3-exporter-v2-wan2'
-    scrape_interval: 5m
-    scrape_offset: 3m
+    scrape_interval: 5m20s
     scrape_timeout: 200s
     metrics_path: '/probe'
     params:
@@ -194,8 +192,7 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN3
   - job_name: 'iperf3-exporter-v2-wan3'
-    scrape_interval: 5m
-    scrape_offset: 6m
+    scrape_interval: 5m40s
     scrape_timeout: 200s
     metrics_path: '/probe'
     params:
@@ -213,8 +210,7 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN4
   - job_name: 'iperf3-exporter-v2-wan4'
-    scrape_interval: 5m
-    scrape_offset: 9m
+    scrape_interval: 6m
     scrape_timeout: 200s
     metrics_path: '/probe'
     params:
@@ -232,8 +228,7 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN5
   - job_name: 'iperf3-exporter-v2-wan5'
-    scrape_interval: 5m
-    scrape_offset: 12m
+    scrape_interval: 6m20s
     scrape_timeout: 200s
     metrics_path: '/probe'
     params:
@@ -251,8 +246,7 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN6
   - job_name: 'iperf3-exporter-v2-wan6'
-    scrape_interval: 5m
-    scrape_offset: 15m
+    scrape_interval: 6m40s
     scrape_timeout: 200s
     metrics_path: '/probe'
     params:
@@ -270,8 +264,7 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN7
   - job_name: 'iperf3-exporter-v2-wan7'
-    scrape_interval: 5m
-    scrape_offset: 18m
+    scrape_interval: 7m
     scrape_timeout: 200s
     metrics_path: '/probe'
     params:
@@ -289,8 +282,7 @@ scrape_configs:
 
   # iPerf3 Exporter v2 - WAN8
   - job_name: 'iperf3-exporter-v2-wan8'
-    scrape_interval: 5m
-    scrape_offset: 21m
+    scrape_interval: 7m20s
     scrape_timeout: 200s
     metrics_path: '/probe'
     params:
