--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -152,16 +152,15 @@ scrape_configs:
     static_configs:
       - targets: ['192.168.10.18:9202']
 
-  # iPerf3 Exporter v2 - WAN1 (Enhanced by ThanhDeptr)
-  # Staggered intervals to avoid concurrent iperf3 tests to same server
-  - job_name: 'iperf3-exporter-v2-wan1'
+  # iPerf3 Exporter v2 - WAN1 Upload
+  - job_name: 'iperf3-exporter-v2-wan1-upload'
     scrape_interval: 7m
-    scrape_timeout: 360s
+    scrape_timeout: 300s
     metrics_path: '/probe'
     params:
       target: ['13.231.52.162']
       port: ['5201']
-      bidirectional: ['true']
+      bidirectional: ['false']
       bind_address: ['192.168.10.160']
       parallel: ['2']
       period: ['8s']
@@ -170,17 +169,37 @@ scrape_configs:
         labels: 
           wan: 'WAN1'
           region: 'japan'
+          direction: 'upload'
 
-
-  # iPerf3 Exporter v2 - WAN2
-  - job_name: 'iperf3-exporter-v2-wan2'
+  # iPerf3 Exporter v2 - WAN1 Download
+  - job_name: 'iperf3-exporter-v2-wan1-download'
     scrape_interval: 7m30s
-    scrape_timeout: 400s
+    scrape_timeout: 300s
     metrics_path: '/probe'
     params:
       target: ['13.231.52.162']
       port: ['5201']
-      bidirectional: ['true']
+      bidirectional: ['false']
+      reverse: ['true']
+      bind_address: ['192.168.10.160']
+      parallel: ['2']
+      period: ['8s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels: 
+          wan: 'WAN1'
+          region: 'japan'
+          direction: 'download'
+
+  # iPerf3 Exporter v2 - WAN2 Upload
+  - job_name: 'iperf3-exporter-v2-wan2-upload'
+    scrape_interval: 8m
+    scrape_timeout: 300s
+    metrics_path: '/probe'
+    params:
+      target: ['13.231.52.162']
+      port: ['5201']
+      bidirectional: ['false']
       bind_address: ['192.168.10.161']
       parallel: ['2']
       period: ['8s']
@@ -189,16 +208,37 @@ scrape_configs:
         labels:
           wan: 'WAN2'
           region: 'japan'
+          direction: 'upload'
 
-  # iPerf3 Exporter v2 - WAN3
-  - job_name: 'iperf3-exporter-v2-wan3'
-    scrape_interval: 8m
-    scrape_timeout: 400s
+  # iPerf3 Exporter v2 - WAN2 Download
+  - job_name: 'iperf3-exporter-v2-wan2-download'
+    scrape_interval: 8m30s
+    scrape_timeout: 300s
     metrics_path: '/probe'
     params:
       target: ['13.231.52.162']
       port: ['5201']
-      bidirectional: ['true']
+      bidirectional: ['false']
+      reverse: ['true']
+      bind_address: ['192.168.10.161']
+      parallel: ['2']
+      period: ['8s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels:
+          wan: 'WAN2'
+          region: 'japan'
+          direction: 'download'
+
+  # iPerf3 Exporter v2 - WAN3 Upload
+  - job_name: 'iperf3-exporter-v2-wan3-upload'
+    scrape_interval: 9m
+    scrape_timeout: 300s
+    metrics_path: '/probe'
+    params:
+      target: ['13.231.52.162']
+      port: ['5201']
+      bidirectional: ['false']
       bind_address: ['192.168.10.162']
       parallel: ['2']
       period: ['8s']
@@ -207,16 +247,37 @@ scrape_configs:
         labels:
           wan: 'WAN3'
           region: 'japan'
+          direction: 'upload'
 
-  # iPerf3 Exporter v2 - WAN4
-  - job_name: 'iperf3-exporter-v2-wan4'
-    scrape_interval: 8m30s
-    scrape_timeout: 400s
+  # iPerf3 Exporter v2 - WAN3 Download
+  - job_name: 'iperf3-exporter-v2-wan3-download'
+    scrape_interval: 9m30s
+    scrape_timeout: 300s
     metrics_path: '/probe'
     params:
       target: ['13.231.52.162']
       port: ['5201']
-      bidirectional: ['true']
+      bidirectional: ['false']
+      reverse: ['true']
+      bind_address: ['192.168.10.162']
+      parallel: ['2']
+      period: ['8s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels:
+          wan: 'WAN3'
+          region: 'japan'
+          direction: 'download'
+
+  # iPerf3 Exporter v2 - WAN4 Upload
+  - job_name: 'iperf3-exporter-v2-wan4-upload'
+    scrape_interval: 10m
+    scrape_timeout: 300s
+    metrics_path: '/probe'
+    params:
+      target: ['13.231.52.162']
+      port: ['5201']
+      bidirectional: ['false']
       bind_address: ['192.168.10.163']
       parallel: ['2']
       period: ['8s']
@@ -225,16 +286,37 @@ scrape_configs:
         labels:
           wan: 'WAN4'
           region: 'japan'
+          direction: 'upload'
 
-  # iPerf3 Exporter v2 - WAN5
-  - job_name: 'iperf3-exporter-v2-wan5'
-    scrape_interval: 9m
-    scrape_timeout: 400s
+  # iPerf3 Exporter v2 - WAN4 Download
+  - job_name: 'iperf3-exporter-v2-wan4-download'
+    scrape_interval: 10m30s
+    scrape_timeout: 300s
     metrics_path: '/probe'
     params:
       target: ['13.231.52.162']
       port: ['5201']
-      bidirectional: ['true']
+      bidirectional: ['false']
+      reverse: ['true']
+      bind_address: ['192.168.10.163']
+      parallel: ['2']
+      period: ['8s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels:
+          wan: 'WAN4'
+          region: 'japan'
+          direction: 'download'
+
+  # iPerf3 Exporter v2 - WAN5 Upload
+  - job_name: 'iperf3-exporter-v2-wan5-upload'
+    scrape_interval: 11m
+    scrape_timeout: 300s
+    metrics_path: '/probe'
+    params:
+      target: ['13.231.52.162']
+      port: ['5201']
+      bidirectional: ['false']
       bind_address: ['192.168.10.164']
       parallel: ['2']
       period: ['8s']
@@ -243,16 +325,37 @@ scrape_configs:
         labels:
           wan: 'WAN5'
           region: 'japan'
+          direction: 'upload'
 
-  # iPerf3 Exporter v2 - WAN6
-  - job_name: 'iperf3-exporter-v2-wan6'
-    scrape_interval: 9m30s
-    scrape_timeout: 400s
+  # iPerf3 Exporter v2 - WAN5 Download
+  - job_name: 'iperf3-exporter-v2-wan5-download'
+    scrape_interval: 11m30s
+    scrape_timeout: 300s
     metrics_path: '/probe'
     params:
       target: ['13.231.52.162']
       port: ['5201']
-      bidirectional: ['true']
+      bidirectional: ['false']
+      reverse: ['true']
+      bind_address: ['192.168.10.164']
+      parallel: ['2']
+      period: ['8s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels:
+          wan: 'WAN5'
+          region: 'japan'
+          direction: 'download'
+
+  # iPerf3 Exporter v2 - WAN6 Upload
+  - job_name: 'iperf3-exporter-v2-wan6-upload'
+    scrape_interval: 12m
+    scrape_timeout: 300s
+    metrics_path: '/probe'
+    params:
+      target: ['13.231.52.162']
+      port: ['5201']
+      bidirectional: ['false']
       bind_address: ['192.168.10.165']
       parallel: ['2']
       period: ['8s']
@@ -261,16 +364,37 @@ scrape_configs:
         labels:
           wan: 'WAN6'
           region: 'japan'
+          direction: 'upload'
 
-  # iPerf3 Exporter v2 - WAN7
-  - job_name: 'iperf3-exporter-v2-wan7'
-    scrape_interval: 10m
-    scrape_timeout: 400s
+  # iPerf3 Exporter v2 - WAN6 Download
+  - job_name: 'iperf3-exporter-v2-wan6-download'
+    scrape_interval: 12m30s
+    scrape_timeout: 300s
     metrics_path: '/probe'
     params:
       target: ['13.231.52.162']
       port: ['5201']
-      bidirectional: ['true']
+      bidirectional: ['false']
+      reverse: ['true']
+      bind_address: ['192.168.10.165']
+      parallel: ['2']
+      period: ['8s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels:
+          wan: 'WAN6'
+          region: 'japan'
+          direction: 'download'
+
+  # iPerf3 Exporter v2 - WAN7 Upload
+  - job_name: 'iperf3-exporter-v2-wan7-upload'
+    scrape_interval: 13m
+    scrape_timeout: 300s
+    metrics_path: '/probe'
+    params:
+      target: ['13.231.52.162']
+      port: ['5201']
+      bidirectional: ['false']
       bind_address: ['192.168.10.166']
       parallel: ['2']
       period: ['8s']
@@ -279,16 +403,37 @@ scrape_configs:
         labels:
           wan: 'WAN7'
           region: 'japan'
+          direction: 'upload'
 
-  # iPerf3 Exporter v2 - WAN8
-  - job_name: 'iperf3-exporter-v2-wan8'
-    scrape_interval: 10m30s
-    scrape_timeout: 400s
+  # iPerf3 Exporter v2 - WAN7 Download
+  - job_name: 'iperf3-exporter-v2-wan7-download'
+    scrape_interval: 13m30s
+    scrape_timeout: 300s
     metrics_path: '/probe'
     params:
       target: ['13.231.52.162']
       port: ['5201']
-      bidirectional: ['true']
+      bidirectional: ['false']
+      reverse: ['true']
+      bind_address: ['192.168.10.166']
+      parallel: ['2']
+      period: ['8s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels:
+          wan: 'WAN7'
+          region: 'japan'
+          direction: 'download'
+
+  # iPerf3 Exporter v2 - WAN8 Upload
+  - job_name: 'iperf3-exporter-v2-wan8-upload'
+    scrape_interval: 14m
+    scrape_timeout: 300s
+    metrics_path: '/probe'
+    params:
+      target: ['13.231.52.162']
+      port: ['5201']
+      bidirectional: ['false']
       bind_address: ['192.168.10.167']
       parallel: ['2']
       period: ['8s']
@@ -297,6 +442,27 @@ scrape_configs:
         labels:
           wan: 'WAN8'
           region: 'japan'
+          direction: 'upload'
+
+  # iPerf3 Exporter v2 - WAN8 Download
+  - job_name: 'iperf3-exporter-v2-wan8-download'
+    scrape_interval: 14m30s
+    scrape_timeout: 300s
+    metrics_path: '/probe'
+    params:
+      target: ['13.231.52.162']
+      port: ['5201']
+      bidirectional: ['false']
+      reverse: ['true']
+      bind_address: ['192.168.10.167']
+      parallel: ['2']
+      period: ['8s']
+    static_configs:
+      - targets: ['192.168.10.18:9579']
+        labels:
+          wan: 'WAN8'
+          region: 'japan'
+          direction: 'download'
 
 
 
