--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -191,83 +191,83 @@ scrape_configs:
           region: 'japan'
           direction: 'download'
 
-  # iPerf3 Exporter v2 - WAN2 Upload
-  - job_name: 'iperf3-exporter-v2-wan2-upload'
-    scrape_interval: 8m
-    scrape_timeout: 10s
-    metrics_path: '/probe'
-    params:
-      target: ['13.231.52.162']
-      port: ['5201']
-      bidirectional: ['false']
-      bind_address: ['192.168.10.35']
-      parallel: ['2']
-      period: ['8s']
-    static_configs:
-      - targets: ['192.168.10.27:9579']
-        labels:
-          wan: 'WAN2'
-          region: 'japan'
-          direction: 'upload'
+  # iPerf3 Exporter v2 - WAN2 Upload (DISABLED)
+  # - job_name: 'iperf3-exporter-v2-wan2-upload'
+  #   scrape_interval: 8m
+  #   scrape_timeout: 10s
+  #   metrics_path: '/probe'
+  #   params:
+  #     target: ['13.231.52.162']
+  #     port: ['5201']
+  #     bidirectional: ['false']
+  #     bind_address: ['192.168.10.35']
+  #     parallel: ['2']
+  #     period: ['8s']
+  #   static_configs:
+  #     - targets: ['192.168.10.27:9579']
+  #       labels:
+  #         wan: 'WAN2'
+  #         region: 'japan'
+  #         direction: 'upload'
 
-  # iPerf3 Exporter v2 - WAN2 Download
-  - job_name: 'iperf3-exporter-v2-wan2-download'
-    scrape_interval: 8m30s
-    scrape_timeout: 10s
-    metrics_path: '/probe'
-    params:
-      target: ['13.231.52.162']
-      port: ['5201']
-      bidirectional: ['false']
-      reverse: ['true']
-      bind_address: ['192.168.10.35']
-      parallel: ['2']
-      period: ['8s']
-    static_configs:
-      - targets: ['192.168.10.27:9579']
-        labels:
-          wan: 'WAN2'
-          region: 'japan'
-          direction: 'download'
+  # iPerf3 Exporter v2 - WAN2 Download (DISABLED)
+  # - job_name: 'iperf3-exporter-v2-wan2-download'
+  #   scrape_interval: 8m30s
+  #   scrape_timeout: 10s
+  #   metrics_path: '/probe'
+  #   params:
+  #     target: ['13.231.52.162']
+  #     port: ['5201']
+  #     bidirectional: ['false']
+  #     reverse: ['true']
+  #     bind_address: ['192.168.10.35']
+  #     parallel: ['2']
+  #     period: ['8s']
+  #   static_configs:
+  #     - targets: ['192.168.10.27:9579']
+  #       labels:
+  #         wan: 'WAN2'
+  #         region: 'japan'
+  #         direction: 'download'
 
-  # iPerf3 Exporter v2 - WAN3 Upload
-  - job_name: 'iperf3-exporter-v2-wan3-upload'
-    scrape_interval: 9m
-    scrape_timeout: 10s
-    metrics_path: '/probe'
-    params:
-      target: ['13.231.52.162']
-      port: ['5201']
-      bidirectional: ['false']
-      bind_address: ['192.168.10.36']
-      parallel: ['2']
-      period: ['8s']
-    static_configs:
-      - targets: ['192.168.10.27:9579']
-        labels:
-          wan: 'WAN3'
-          region: 'japan'
-          direction: 'upload'
+  # iPerf3 Exporter v2 - WAN3 Upload (DISABLED)
+  # - job_name: 'iperf3-exporter-v2-wan3-upload'
+  #   scrape_interval: 9m
+  #   scrape_timeout: 10s
+  #   metrics_path: '/probe'
+  #   params:
+  #     target: ['13.231.52.162']
+  #     port: ['5201']
+  #     bidirectional: ['false']
+  #     bind_address: ['192.168.10.36']
+  #     parallel: ['2']
+  #     period: ['8s']
+  #   static_configs:
+  #     - targets: ['192.168.10.27:9579']
+  #       labels:
+  #         wan: 'WAN3'
+  #         region: 'japan'
+  #         direction: 'upload'
 
-  # iPerf3 Exporter v2 - WAN3 Download
-  - job_name: 'iperf3-exporter-v2-wan3-download'
-    scrape_interval: 9m30s
-    scrape_timeout: 10s
-    metrics_path: '/probe'
-    params:
-      target: ['13.231.52.162']
-      port: ['5201']
-      bidirectional: ['false']
-      reverse: ['true']
-      bind_address: ['192.168.10.36']
-      parallel: ['2']
-      period: ['8s']
-    static_configs:
-      - targets: ['192.168.10.27:9579']
-        labels:
-          wan: 'WAN3'
-          region: 'japan'
-          direction: 'download'
+  # iPerf3 Exporter v2 - WAN3 Download (DISABLED)
+  # - job_name: 'iperf3-exporter-v2-wan3-download'
+  #   scrape_interval: 9m30s
+  #   scrape_timeout: 10s
+  #   metrics_path: '/probe'
+  #   params:
+  #     target: ['13.231.52.162']
+  #     port: ['5201']
+  #     bidirectional: ['false']
+  #     reverse: ['true']
+  #     bind_address: ['192.168.10.36']
+  #     parallel: ['2']
+  #     period: ['8s']
+  #   static_configs:
+  #     - targets: ['192.168.10.27:9579']
+  #       labels:
+  #         wan: 'WAN3'
+  #         region: 'japan'
+  #         direction: 'download'
 
   # iPerf3 Exporter v2 - WAN4 Upload
   - job_name: 'iperf3-exporter-v2-wan4-upload'
