chinh dung reverse mode

--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -180,7 +180,7 @@ scrape_configs:
       target: ['13.231.52.162']
       port: ['5201']
       bidirectional: ['false']
-      reverse: ['true']
+      reverse_mode: ['true']
       bind_address: ['192.168.10.34']
       parallel: ['2']
       period: ['8s']
@@ -219,7 +219,7 @@ scrape_configs:
   #     target: ['13.231.52.162']
   #     port: ['5201']
   #     bidirectional: ['false']
-  #     reverse: ['true']
+  #     reverse_mode: ['true']
   #     bind_address: ['192.168.10.35']
   #     parallel: ['2']
   #     period: ['8s']
@@ -258,7 +258,7 @@ scrape_configs:
   #     target: ['13.231.52.162']
   #     port: ['5201']
   #     bidirectional: ['false']
-  #     reverse: ['true']
+  #     reverse_mode: ['true']
   #     bind_address: ['192.168.10.36']
   #     parallel: ['2']
   #     period: ['8s']
@@ -297,7 +297,7 @@ scrape_configs:
       target: ['13.231.52.162']
       port: ['5201']
       bidirectional: ['false']
-      reverse: ['true']
+      reverse_mode: ['true']
       bind_address: ['192.168.10.37']
       parallel: ['2']
       period: ['8s']
@@ -336,7 +336,7 @@ scrape_configs:
       target: ['13.231.52.162']
       port: ['5201']
       bidirectional: ['false']
-      reverse: ['true']
+      reverse_mode: ['true']
       bind_address: ['192.168.10.38']
       parallel: ['2']
       period: ['8s']
@@ -375,7 +375,7 @@ scrape_configs:
       target: ['13.231.52.162']
       port: ['5201']
       bidirectional: ['false']
-      reverse: ['true']
+      reverse_mode: ['true']
       bind_address: ['192.168.10.39']
       parallel: ['2']
       period: ['8s']
@@ -414,7 +414,7 @@ scrape_configs:
       target: ['13.231.52.162']
       port: ['5201']
       bidirectional: ['false']
-      reverse: ['true']
+      reverse_mode: ['true']
       bind_address: ['192.168.10.40']
       parallel: ['2']
       period: ['8s']
@@ -453,7 +453,7 @@ scrape_configs:
       target: ['13.231.52.162']
       port: ['5201']
       bidirectional: ['false']
-      reverse: ['true']
+      reverse_mode: ['true']
       bind_address: ['192.168.10.41']
       parallel: ['2']
       period: ['8s']
